--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Programar</li>
   </ul>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Beach_Tennis.jpg" alt="Mulher jogando Beach Tennis" width="400" />
+  <img src="absolute size-full bg-white transition-all duration-1000 ease-out bg-[size:16px_16px] bg-[position:0_0,8px_8px] bg-[image:linear-gradient(45deg,#efefef_25%,rgba(239,239,239,0)_25%,rgba(239,239,239,0)_75%,#efefef_75%,#efefef),linear-gradient(45deg,#efefef_25%,rgba(239,239,239,0)_25%,rgba(239,239,239,0)_75%,#efefef_75%,#efefef)] [clip-path:polygon(0px_0px,0%_0px,0%_100%,0px_100%)]="400" />
 
   <table border="1">
     <tr>
