--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Programar</li>
   </ul>
 
-  <img src="absolute size-full bg-white transition-all duration-1000 ease-out bg-[size:16px_16px] bg-[position:0_0,8px_8px] bg-[image:linear-gradient(45deg,#efefef_25%,rgba(239,239,239,0)_25%,rgba(239,239,239,0)_75%,#efefef_75%,#efefef),linear-gradient(45deg,#efefef_25%,rgba(239,239,239,0)_25%,rgba(239,239,239,0)_75%,#efefef_75%,#efefef)] [clip-path:polygon(0px_0px,0%_0px,0%_100%,0px_100%)]="400" />
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tdgsports.com.br%2Fpagina%2Fbeach-tennis-tudo-o-que-voce-precisa-saber-sobre-o-esporte-do-momento.html%3Fsrsltid%3DAfmBOorDS2zV3Cfh64HTcoktF4SNwUyO5WVo9r0LCM8xwZqgXih1nHVl&psig=AOvVaw2Qt2ZnLq8t-GGXpEJnmxVF&ust=1751835447668000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJDdht7Npo4DFQAAAAAdAAAAABAE"400" />
 
   <table border="1">
     <tr>
