--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Programar</li>
   </ul>
 
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tdgsports.com.br%2Fpagina%2Fbeach-tennis-tudo-o-que-voce-precisa-saber-sobre-o-esporte-do-momento.html%3Fsrsltid%3DAfmBOorDS2zV3Cfh64HTcoktF4SNwUyO5WVo9r0LCM8xwZqgXih1nHVl&psig=AOvVaw2Qt2ZnLq8t-GGXpEJnmxVF&ust=1751835447668000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJDdht7Npo4DFQAAAAAdAAAAABAE"400" />
+ <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Beach_Tennis.jpg" alt="Mulher jogando Beach Tennis" width="400" />
 
   <table border="1">
     <tr>
