--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Programar</li>
   </ul>
 
- <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Beach_Tennis.jpg" alt="Mulher jogando Beach Tennis" width="400" />
+ <img src="https://cdn.awsli.com.br/978/978132/arquivos/istock-1424037866.jpg" alt="Mulher jogando Beach Tennis" width="400" />
 
   <table border="1">
     <tr>
