--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     Tenho 24 anos, moro no interior da Bahia e comecei a faculdade de Análise e Desenvolvimento no intuito de aprender a programar e entrar no mercado. Atualmente trabalho como WebDesigner, fazendo páginas com o WordPress e Elementor, mas busco me aprimorar mais na área.
   </p>
 
-  <h2>Esses são os meus hobbies</h2>
+  <h2>Esses são os meus hobbies:</h2>
   <ul>
     <li>BeachTennis</li>
-    <li>Jogar</li>
-    <li>Programar</li>
+    <li>Video Game</li>
+    <li>Programação</li>
   </ul>
 
- <img src="https://cdn.awsli.com.br/978/978132/arquivos/istock-1424037866.jpg" alt="Mulher jogando Beach Tennis" width="400" />
+ <img src="https://cdn.awsli.com.br/978/978132/arquivos/istock-1424037866.jpg" width="400" />
 
   <table border="1">
     <tr>
