--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
     </tr>
   </table>
 
-  <br />
 
-  <a href="https://br.pinterest.com/" target="_blank">Visite meu site favorito!</a>
-
-  <br /><br />
-
-  <button onclick="mostrarMensagem()">Clique para ver uma mensagem!</button>
+  <button onclick="mostrarMensagem()">Visite o meu site favorito!</button>
   <p id="mensagem"></p>
 
   <script src="script.js"></script>
